HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignImmutableLet/Source/Main.uv
//! Rejected statement specimen for assignment to an immutable let binding.

public procedure assignImmutableLetReference() -> i32 {
    let value: i32 = 1
    value = 2
    return value
}
